Estructura lista, imagenes y precio

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         <div class="hero-overlay"></div>
         <div class="container">
             <div class="hero-content">
-                <h2 class="hero-title">Moda Urbana. Estilo Auténtico.</h2>
-                <p class="hero-subtitle">Descubre la nueva colección de STUDIO DESKD</p>
+                <h2 class="hero-title">STUDIO DESKD</h2>
+                <p class="hero-subtitle">Descubre la nueva colección</p>
                 <p class="hero-description">
                     Combinamos diseño innovador con calidad premium para crear prendas 
                     que reflejan tu personalidad única. Desde camisetas statement hasta 
@@ -221,9 +221,9 @@
                 </div>
                 <div class="footer-section">
                     <h4>Contacto</h4>
-                    <p>📧 info@studiodeskd.com</p>
-                    <p>📱 +1 234 567 890</p>
-                    <p>📍 Calle Principal 123</p>
+                    <p>📧 deskd_moda@hotmail.com</p>
+                    <p>📱 +57 300 319 7110</p>
+                    <p>📍 CC Tesoro </p>
                 </div>
                 <div class="footer-section">
                     <h4>Categorías</h4>
